--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,6 @@
 @import "bootstrap";
 
+
 /* mixins, variables, etc. */
 
 $grayMediumLight: #eaeaea;
@@ -254,4 +255,12 @@ aside {
     height: 100px;
     margin-bottom: 5px;
   }
+}
+
+/* maps */
+.map {
+  position:absolute; 
+  top:200px; 
+  bottom:30px; 
+  width:100%;
 }
