--- a/app/views/static_pages/map.html.erb
+++ b/app/views/static_pages/map.html.erb
@@ -1,3 +1,4 @@
+
 <% provide(:title, 'Map') %>
 <h1>Map</h1>
 <p>
@@ -7,8 +8,6 @@
   is the sample application for the tutorial.
 </p>
 
-<div id='map'></div>
-<script>
-var map = L.mapbox.map('map', 'examples.map-9ijuk24y')
-    .setView([40, -74.50], 9);
-</script>
+<div class="container">
+<div id='map' class="map"></div>
+</div>
