fix heroku map try 2

--- a/app/views/static_pages/map.html.erb
+++ b/app/views/static_pages/map.html.erb
@@ -1,4 +1,4 @@
-
+<%= javascript_include_tag "mapbox" %>
 <% provide(:title, 'Map') %>
 <h1>Map</h1>
 <p>
@@ -9,4 +9,4 @@
 </p>
 
 
-<div id='map' class="map"></div>
+<div id='map' class="my_map"></div>
